modificato scroll down

--- a/index.html
+++ b/index.html
@@ -70,26 +70,27 @@
     </header>
     <!-- end header section -->
     <!-- slider section -->
-    <section class=" slider_section position-relative">
+    <section id="section04" class="demo slider_section position-relative">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
+      <!--  <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
+        </ol> -->
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="container">
               <div class="row">
                 <div class="col">
                   <div class="detail-box">
-                    <div>
-                      <h1>
+                    <div >
+                      <h1 style="position: relative; top: 50px;">
                         N U T R I T I O N
                       </h1>
-                      <a href="">
-                        Read More
-                      </a>
+                      <br>
+                      <br>
+                      <br>
+                      <a href="#section05"><span></span>Scroll</a>
                     </div>
                   </div>
                 </div>
@@ -140,7 +141,7 @@
 
   <!-- special section -->
 
-  <section class="special_section">
+  <section id="section05" class="demo special_section">
     <div class="container">
       <div class="special_container">
         <div class="box b1">
