--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                       <br>
                       <br>
                       <br>
-                      <a href="#section05"><span></span>Scroll</a>
+                      <a href="#section05"><span></span>Scroll down</a>
                     </div>
                   </div>
                 </div>
