modifiche alla navbar

--- a/contact.html
+++ b/contact.html
@@ -46,22 +46,22 @@
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About </a>
+                <a class="nav-link" href="documentation.html"> Documentation </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="course.html"> Courses </a>
+                <a class="nav-link" href="course.html"> Metadata </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="event.html"> Events </a>
+                <a class="nav-link" href="event.html"> Visualizations </a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="contact.html">Contact us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
+                <a class="nav-link" href="login.html"></a>
               </li>
             </ul>
-          
+
           </div>
         </nav>
       </div>
