--- a/course.html
+++ b/course.html
@@ -46,7 +46,7 @@
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About </a>
+                <a class="nav-link" href="documentation.html"> Documentation </a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="course.html"> Metadata </a>
@@ -58,10 +58,10 @@
                 <a class="nav-link" href="contact.html">Contact us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
+                <a class="nav-link" href="login.html"></a>
               </li>
             </ul>
-            
+
           </div>
         </nav>
       </div>
