aggiunto logo common license nel footer

--- a/index.html
+++ b/index.html
@@ -647,7 +647,16 @@
 
       <p>
         Created by Amanda Culoma, Andrea Schimmenti, Ariele Santello and Giulia Massimino <br> for the final project of the Open Access and Digital Ethics course held by Monica Palmirani - master degree course DHDK - University of Bologna.
+      <br>
+      <br>
+      This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" >Creative Commons Attribution-ShareAlike 4.0 International License.</a>
+      <br>
+      <br>
+      <a rel="license" target="blank" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"></a>
+      <br>
+      <br>
       </p>
+
 
   </footer>
 
