--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 <a class="nav-link" href="course.html"> Metadata </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="event.html"> Visualizations </a>
+                <a class="nav-link" href="visualizations.html"> Visualizations </a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="contact.html">Contact us</a>
