--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                 <a class="nav-link" href="course.html"> Courses </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="event.html"> Events </a>
+                <a class="nav-link" href="visualizations.html"> Visualizations </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact us</a>
