cambiati nomi dei fikle per migliore corrispondenza di contenuto

--- a/documentation.html
+++ b/documentation.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Open Nutrition</title>
+  <title>NutriData</title>
 
 
   <!-- bootstrap core css -->
@@ -33,9 +33,9 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <h3>
-              Open
+              Nutri
             </h3>
-            <span> Nutrition</span>
+            <span> Data</span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
                 <a class="nav-link" href="documentation.html"> Documentation </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="course.html"> Metadata </a>
+                <a class="nav-link" href="metadata.html"> Metadata </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="visualizations.html"> Visualizations </a>
@@ -91,7 +91,7 @@
           <div class="detail-box">
             <div class="heading_container">
               <h3>
-                About Our College
+                Documentation
               </h3>
               <p>
                 It is a long established fact that a reader will be distracted
