--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
                 <a class="nav-link" href="about.html"> About </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="course.html"> Courses </a>
+                <a class="nav-link" href="metadata.html"> Courses </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="visualizations.html"> Visualizations </a>
