--- a/metadata.html
+++ b/metadata.html
@@ -49,7 +49,7 @@
                 <a class="nav-link" href="documentation.html"> Documentation </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="course.html"> Metadata </a>
+                <a class="nav-link" href="metadata.html"> Metadata </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="visualizations.html"> Visualizations </a>
