--- a/visualizations.html
+++ b/visualizations.html
@@ -59,7 +59,7 @@
                 <a class="nav-link" href="about.html"> Documentation </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="course.html"> Metadata </a>
+                <a class="nav-link" href="metadata.html"> Metadata </a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="visualizations.html"> Visualizations </a>
