--- a/documentation.html
+++ b/documentation.html
@@ -187,15 +187,18 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      &copy; 2021 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      NutriData &copy; 2021
+
     </p>
   </footer>
   <footer class="container-fluid footer_section">
 
     <p>
-      Distributed By
-      <a href="https://themewagon.com/">Themewagon</a>
+      This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" >Creative Commons Attribution-ShareAlike 4.0 International License.</a>
+      <br>
+      <br>
+      <a rel="license" target="blank" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"></a>
+      <br>
     </p>
 
 </footer>
