--- a/index.html
+++ b/index.html
@@ -397,19 +397,46 @@
           </div>
           <div class="detail-box">
             <h4>
-              Education Events 2021
+              Andrea Schimmenti
             </h4>
-            <h6>
-              8:00 AM - 5:00 PM VENICE, ITALY
+            <h6 style="text-align: center;">
+              <p style="margin: 1%;">descrizioncina Graduated in Modern Literature at the
+                University of Bologna with a thesis about Weblogs. She is now attending the Digital Humanities ay of Bologna.
+                She has always been in love with culture and art and she
+                is now trying to exploit technologies as a mean to spread cultural issues over an audience as wide as possible. h good company.</p>
             </h6>
           </div>
-          <div class="date-box">
-            <h3>
-              <span>
-                15
-              </span>
-              February
-            </h3>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/ariele-santello.jpg" alt="" />
+          </div>
+          <div class="detail-box">
+            <h4>
+              Ariele Santello
+            </h4>
+            <h6 style="text-align: center;">
+              <p style="margin: 1%;">Graduated in Modern Literature at the University of Bologna with a thesis about Weblogs.
+                She is now attending the Digital Humanities and Digital Knowledge Master at the University of Bologna.
+                She has always been in love with culture and art and she is now trying to exploit technologies as a mean to spread cultural issues over an audience as wide as possible.
+                She loves everything related to Japan and she finds happiness in good weather and great food with good company.</p>
+            </h6>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/event-img.jpg" alt="" />
+          </div>
+          <div class="detail-box">
+            <h4>
+              Giulia Massimino
+            </h4>
+            <h6 style="text-align: center;">
+              <p style="margin: 1%;">descrizioncina Graduated in Modern Literature at the
+                University of Bologna with a thesis about Weblogs. She is now attending the Digital Humanities ay of Bologna.
+                She has always been in love with culture and art and she
+                is now trying to exploit technologies as a mean to spread cultural issues over an audience as wide as possible. h good company.</p>
+            </h6>
           </div>
         </div>
       </div>
