--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 
   <!-- contact section -->
 
-  <section class="contact_section ">
+  <section class="contact_section  layout_padding">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -551,32 +551,45 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="contact-form">
-            <h5>
-              Get In Touch
+
+        <div class="col-md-3">
+          <div class="info_menu">
+            <h5 style="color: #ffffff; font-weight: 600;">
+              QUICK LINKS
             </h5>
-            <form action="">
-              <div>
-                <input type="text" placeholder="Full Name " />
-              </div>
-              <div>
-                <input type="text" placeholder="Phone Number" />
-              </div>
-              <div>
-                <input type="email" placeholder="Email Address" />
-              </div>
-              <div>
-                <input type="text" placeholder="Message" class="input_message" />
-              </div>
-              <div class="d-flex justify-content-center">
-                <button type="submit" class="btn_on-hover">
-                  Send
-                </button>
-              </div>
-            </form>
+            <ul class="navbar-nav  ">
+              <li class="nav-item active">
+                <a style="color: #ffffff;" class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="about.html"> About </a>
+              </li>
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="course.html"> Courses </a>
+              </li>
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="visualizations.html"> Visualizations </a>
+              </li>
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="contact.html">Contact us</a>
+              </li>
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="login.html">Login</a>
+              </li>
+            </ul>
           </div>
         </div>
+        <div class="col-md-3">
+          <div class="info_news">
+            <h5 style="color: #ffffff; font-weight: 600;">
+              TO KNOW MORE ABOUT US
+            </h5>
+              <div class="btn-box">
+                <a style="color: #ffffff;" href="">Github</a>
+              </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -586,75 +599,7 @@
   <!-- info section -->
   <section class="info_section layout_padding">
     <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="info_menu">
-            <h5>
-              QUICK LINKS
-            </h5>
-            <ul class="navbar-nav  ">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html"> About </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="course.html"> Courses </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="visualizations.html"> Visualizations </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="info_course">
-            <h5>
-              TOP RATED COURSE
-            </h5>
-            <p>
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered alteration in some form, by
-              injected humou
-            </p>
-          </div>
-        </div>
 
-        <div class="col-md-5 offset-md-1">
-          <div class="info_news">
-            <h5>
-              TO KNOW MORE ABOUT US
-            </h5>
-            <div class="info_contact">
-              <a href="">
-                indirizzo github 1 oppure indirizzo unico
-              </a>
-              <a href="">
-                indirizzo github 2
-              </a>
-              <a href="">
-                indirizzo github 3
-              </a>
-              <a href="">
-                indirizzo github 4
-              </a>
-            </div>
-            <form action="">
-              <!--<input type="text" placeholder="" /> -->
-              <button>
-                Github
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
     </div>
   </section>
 
