sistemato scroll index

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                       <br>
                       <br>
                       <br>
-                      <a href="#section05"><span></span>Scroll down</a>
+                      <a href="#down"><span></span>Scroll down</a>
                     </div>
                   </div>
                 </div>
@@ -188,7 +188,7 @@
   <!-- end special section -->
 
   <!-- about section -->
-  <section class="about_section layout_padding">
+  <section id="down"class="about_section layout_padding">
     <div class="side_img">
       <img src="images/side-img.png" alt="" />
     </div>
