--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <div class="container">
       <div class="heading_container">
         <h3>
-          POPULAR COURSES
+          VISUALIZATIONS
         </h3>
         <p>
           It is a long established fact that a reader will be distracted
@@ -245,26 +245,14 @@
       <div class="course_container">
         <div class="course_content">
           <div class="box">
-            <img src="images/c-1.jpg" alt="" />
-            <a href="" class="">
-              <img src="images/link.png" alt="" />
-            </a>
+            <img src="images/lemon-chart.jpg" alt="" />
+
             <h5>
-              VIZ
-               <br />
-              1 (o foto o preview della viz)
+              Visualizations
+
             </h5>
           </div>
-          <div class="box">
-            <img src="images/c-2.jpg" alt="" />
-            <a href="" class="">
-              <img src="images/link.png" alt="" />
-            </a>
-            <h5>
-              VIZ <br />
-              2
-            </h5>
-          </div>
+
         </div>
         <div class="course_content">
           <div class="box">
