--- a/visualizations.html
+++ b/visualizations.html
@@ -15,23 +15,46 @@
   <title>OpenNutrition</title>
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap"
+    rel="stylesheet" />
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
   <style>
-    #chartdiv {
+    #barchartdiv,
+    #chartdiv-gdp,
+    #chartdiv-mrt {
       width: 100%;
-      height: 500px;
+      height: 600px;
     }
-    </style>
+    #mapchartdiv {
+      width: 100%;
+      margin:auto;
+      height: 600px;
+    }
+
+    #slider {
+      margin-top: 20px;
+    }
+
+    .ui-slider .ui-slider-handle {
+      width: 3.2em !important;
+      text-align: center;
+      margin-left: -1.6em !important;
+    }
+
+    .dropdown-menu {
+      max-height: 200px;
+      overflow-y: scroll;
+      overflow-x: hidden;
+    }
+  </style>
 </head>
 
 <body class="sub_page">
@@ -46,7 +69,8 @@
             </h3>
             <span> data</span>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -78,7 +102,7 @@
   </div>
 
   <!-- event section -->
-  <section class="event_section layout_padding">
+  <section class="viz">
     <div class="container">
       <div class="heading_container">
         <h3>
@@ -88,14 +112,58 @@
           Explore our paths
         </p>
       </div>
-      <div class="event_container">
-        <!-- <div class="box"> -->
-          <div id="nations-button"></div>
-          <div id="chart-parent"></div>
-        <!-- </div> -->
-        </div>
+
+      <div class="col-lg-12 col-md-12 col-sm-12 col">
+        <h4>Pathologies - Barchart</h4>
+        <h4 id="barchart-nation-title"></h4>
+        <p>
+          Pathologies caused by malnutrition (per country series). You can see data about asthma, diabetes, livel
+          issues, protein iodine and vitamin A deficiencies.
+        </p>
+        <div id="nations-button-barchart"></div>
+        <div id="barchart-parent"></div>
+
       </div>
 
+      <div class="col-lg-12 col-md-12 col-sm-12 col">
+        <h4>World Map on malnutrition conditions per year</h4>
+        <h4 id="map-nation-title"></h4>
+        <div class="row">
+        <div class="col-6">
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Choose malnutrition type
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <button onclick="getYears('severe-wasting')" class="dropdown-item" type="button">Severe Wasting</button>
+            <button onclick="getYears('wasting')" class="dropdown-item" type="button">Wasting</button>
+            <button onclick="getYears('stunting')" class="dropdown-item" type="button">Stunting</button>
+            <button onclick="getYears('underweight')" class="dropdown-item" type="button">Underweight</button>
+            <button onclick="getYears('overweight')" class="dropdown-item" type="button">Overweight</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-6">  
+      <div id="years-button"></div>
+      </div>
+      </div>
+      <div id="mapchart-parent"></div>
+      </div>
+      
+      <div class="col-lg-12 col-md-12 col-sm-12 col">
+        <div class="row m-0">
+          <div class="col-lg-12 col-md-12 col-sm-12 col m-o p-0">
+            <h4>Graphs about Child Mortality and Gross Domestic Product</h4>
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col m-o p-0">
+            <h4 id="line-nation-title"></h4>
+          </div>
+          <div id="nations-button-linechart" class="col-lg-12 col-md-6 col-sm-6 col p-0"></div>
+          <div id="parent1" class="col-lg-6 col-md-6 col-sm-6 col"></div>
+          <div id="parent2" class="col-lg-6 col-md-6 col-sm-6 col"></div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -106,7 +174,7 @@
   <section class="contact_section  layout_padding">
     <div class="container">
       <div class="row">
-       <div class="col-md-6">
+        <div class="col-md-6">
           <div class="detail-box">
             <!-- <div class="heading_container">
               <h3>
@@ -127,13 +195,14 @@
             </h5>
             <ul class="navbar-nav  ">
               <li class="nav-item active">
-                <a style="color: #ffffff;" class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a style="color: #ffffff;" class="nav-link" href="index.html">Home <span
+                    class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a style="color: #ffffff;" class="nav-link" href="documentation.html"> Documentation </a>
               </li>
               <li class="nav-item">
-                <a style="color: #ffffff;" class="nav-link" href="metadata.html"> Metadata  </a>
+                <a style="color: #ffffff;" class="nav-link" href="metadata.html"> Metadata </a>
               </li>
               <li class="nav-item">
                 <a style="color: #ffffff;" class="nav-link" href="visualizations.html"> Visualizations </a>
@@ -148,11 +217,11 @@
             <h5 style="color: #ffffff; font-weight: 600;">
               TO KNOW MORE ABOUT US
             </h5>
-              <div class="btn-box">
-                <a style="color: #ffffff;" href="https://github.com/aschimmenti/NutriData" target="_blank">
-                  Github Repository
-                </a>
-              </div>
+            <div class="btn-box">
+              <a style="color: #ffffff;" href="https://github.com/aschimmenti/NutriData" target="_blank">
+                Github Repository
+              </a>
+            </div>
           </div>
         </div>
 
@@ -173,36 +242,53 @@
 
   <footer class="container-fluid footer_section">
 
-      <p>
-        Created by Amanda Culoma, Andrea Schimmenti, Ariele Santello and Giulia Massimino <br> for the final project of the Open Access and Digital Ethics course held by Monica Palmirani - master degree course DHDK - University of Bologna.
+    <p>
+      Created by Amanda Culoma, Andrea Schimmenti, Ariele Santello and Giulia Massimino <br> for the final project of
+      the Open Access and Digital Ethics course held by Monica Palmirani - master degree course DHDK - University of
+      Bologna.
       <br>
       <br>
-      This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" >Creative Commons Attribution-ShareAlike 4.0 International License.</a>
+      This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
+        Attribution-ShareAlike 4.0 International License.</a>
       <br>
       <br>
-      <a rel="license" target="blank" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"></a>
+      <a rel="license" target="blank" href="https://creativecommons.org/licenses/by-sa/4.0/"><img
+          alt="Creative Commons License" style="border-width:0"
+          src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"></a>
       <br>
       <br>
-      </p>
+    </p>
 
 
   </footer>
   <!-- footer section -->
 
-<!--  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script> -->
-  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <!--  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script> -->
 
-  <!-- Resources -->
+  <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
+  <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
+  <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
   <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
+  <script src="https://cdn.amcharts.com/lib/5/map.js"></script>
+  <script src="https://cdn.amcharts.com/lib/5/geodata/worldLow.js"></script>
+  <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
   <script src="https://cdn.amcharts.com/lib/5/xy.js"></script>
   <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
   <script src="js/barchart.js"></script>
+  <script src="js/linechart.js"></script>
+  <script src="js/worldmapchart.js"></script>
+
+
 
 </body>
 
