--- a/visualizations.html
+++ b/visualizations.html
@@ -54,6 +54,11 @@
       overflow-y: scroll;
       overflow-x: hidden;
     }
+
+    .dummy {
+      width: 100%;
+      height: 600px;
+    }
   </style>
 </head>
 
@@ -121,7 +126,9 @@
           issues, protein iodine and vitamin A deficiencies.
         </p>
         <div id="nations-button-barchart"></div>
-        <div id="barchart-parent"></div>
+        <div id="barchart-parent">
+          <img class="dummy" src="images/download.png">
+        </div>
 
       </div>
 
@@ -148,7 +155,9 @@
       <div id="years-button"></div>
       </div>
       </div>
-      <div id="mapchart-parent"></div>
+      <div id="mapchart-parent">
+        <img class="dummy" src="images/download.png">
+      </div>
       </div>
       
       <div class="col-lg-12 col-md-12 col-sm-12 col">
@@ -160,8 +169,12 @@
             <h4 id="line-nation-title"></h4>
           </div>
           <div id="nations-button-linechart" class="col-lg-12 col-md-6 col-sm-6 col p-0"></div>
-          <div id="parent1" class="col-lg-6 col-md-6 col-sm-6 col"></div>
-          <div id="parent2" class="col-lg-6 col-md-6 col-sm-6 col"></div>
+          <div id="parent1" class="col-lg-6 col-md-6 col-sm-6 col">
+            <img class="dummy" src="images/download.png">
+          </div>
+          <div id="parent2" class="col-lg-6 col-md-6 col-sm-6 col">
+            <img class="dummy" src="images/download.png">
+          </div>
         </div>
       </div>
     </div>
