fixed metadata page, part 1

--- a/metadata.html
+++ b/metadata.html
@@ -70,102 +70,104 @@
     <div class="side_img">
       <img src="images/side-img.png" alt="" />
     </div>
-    <div class="container">
+    <div class="container metadata-section">
       <div class="heading_container">
         <h3>
           DATASETS - METADATA SECTION
         </h3>
-        <div style="padding-top: 35px;">
-            <p><strong>Nutritional Deficiencies and Related Diseases/Disorders Dataset</strong></p>
-            <p>Identifier: (NutriData uri)</p>
-            <p>Title: NutriData Nutritional Deficiencies and Related Diseases and Disorders</p>
-            <p>Description: This dataset contains data from the Institute for Health Metrics and Evaluation, namely, from the GBD section, Global Burden of Disease. The dataset focuses on nutritional disorders and deficiencies of individuals whose age mainly ranges from 5 to 19 years old (adolescents).</p>
-            <p>Modified: 20/11/2021</p>
-            <p>Source: IHME-GBD_2019_DATA-27a144e6-1_ISO-ready.csv, <a href="http://ghdx.healthdata.org/gbd-results-tool" target="_blank">http://ghdx.healthdata.org/gbd-results-tool</a></p>
-            <p>Theme: Malnutrition, diseases, disorders</p>
-            <p>CSV (comma-separated values), JSON</p>
-            <p>Periodicity: Annual</p>
-            <p>Rights Holder: IHME – Institute for Health Metrics and Evaluation, Global Burden of Disease</p>
-            <p>Subject: Number of people from 5 to 19 years old who suffer nutritional deficiencies and related diseases (e.g. Asthma, Cardiovascular diseases, Diabetes mellitus etc.)</p>
-            <p>Publisher: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
-            <p>Creator: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
-            <p>Language: English</p>
-            <p>Temporal Coverage: 2010-2018</p>
-            <p>Spatial Coverage: World</p>
-            <p>URL: (same as identifier)</p>
-            <p>Licence: CC-BY-SA 4.0</p>
-            <p>Download: (same as URL)</p>
-            <p>Status: Completed</p>
+      </div>
+      
+        <div id="nutridef" class="metadata-content">
+            <h4 class="text-center"> - Nutritional Deficiencies and Related Diseases/Disorders Dataset - </h4>
+            <p><span class="category">Identifier</span>: (NutriData uri)</p>
+            <p><span class="category">Title</span>: NutriData Nutritional Deficiencies and Related Diseases and Disorders</p>
+            <p><span class="category">Description</span>: This dataset contains data from the Institute for Health Metrics and Evaluation, namely, from the GBD section, Global Burden of Disease. The dataset focuses on nutritional disorders and deficiencies of individuals whose age mainly ranges from 5 to 19 years old (adolescents).</p>
+            <p><span class="category">Modified</span>: 20/11/2021</p>
+            <p><span class="category">Source</span>: IHME-GBD_2019_DATA-27a144e6-1_ISO-ready.csv, <a href="http://ghdx.healthdata.org/gbd-results-tool" target="_blank">http://ghdx.healthdata.org/gbd-results-tool</a></p>
+            <p><span class="category">Theme</span>: Malnutrition, diseases, disorders</p>
+            <p><span class="category">Format:</span>CSV (comma-separated values), JSON</p>
+            <p><span class="category">Periodicity</span>: Annual</p>
+            <p><span class="category">Rights Holder</span>: IHME – Institute for Health Metrics and Evaluation, Global Burden of Disease</p>
+            <p><span class="category">Subject</span>: Number of people from 5 to 19 years old who suffer nutritional deficiencies and related diseases (e.g. Asthma, Cardiovascular diseases, Diabetes mellitus etc.)</p>
+            <p><span class="category">Publisher</span>: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
+            <p><span class="category">Creator</span>: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
+            <p><span class="category">Language</span>: English</p>
+            <p><span class="category">Temporal Coverage</span>: 2010-2018</p>
+            <p><span class="category">Spatial Coverage</span>: World</p>
+            <p><span class="category">URL</span>: (same as identifier)</p>
+            <p><span class="category">Licence</span>: CC-BY-SA 4.0</p>
+            <p><span class="category">Licence</span>: (same as URL)</p>
+            <p><span class="category">Licence</span>: Completed</p>
         </div>
 
-        <div style="padding-top: 25px;">
-            <p><strong>Child Mortality Dataset</strong></p>
-            <p>Identifier: (Nutridata uri)</p>
-            <p>Title: NutriData Child Mortality</p>
-            <p>Description: This dataset contains data from the World Health Organization. It is an estimation (a statistical model) that predicts the probability that a child aged 5 dies before reaching its 15th birthday.</p>
-            <p>Modified: (when we update the website)</p>
-            <p>Source: child-mortality.csv, <a href="https://www.who.int/data/gho/data/indicators/indicator-details/GHO/mortality-rate-for-5-14-year-olds-(probability-of-dying-per-1000-children-aged-5-14-years)" target="_blank">https://www.who.int/data/gho/data/indicators/indicator-details/GHO/mortality-rate-for-5-14-year-olds-(probability-of-dying-per-1000-children-aged-5-14-years)</a></p>
-            <p>Theme: Child mortality and burden of disease</p>
-            <p>Format: CSV, JSON</p>
-            <p>Periodicity: Annual</p>
-            <p>Rights Holder: WHO</p>
-            <p>Subject: The probability that a child aged 5 dies before reaching its 15th birthday, a rate of deaths per 1000 children.</p>
-            <p>Publisher: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
-            <p>Creator: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
-            <p>Language: English</p>
-            <p>Temporal Coverage: 2010-2018</p>
-            <p>Spatial Coverage: World</p>
-            <p>URL: (same as identifier)</p>
-            <p>Licence: CC-BY-SA 4.0</p>
-            <p>Download: (same as URL)</p>
-            <p>Status: Completed</p>
+        <div id="nutrimrt" class="metadata-content">
+            <h4 class="text-center"> - Child Mortality Dataset - </h4>
+            <p><span class="category">Licence</span>: (Nutridata uri)</p>
+            <p><span class="category">Licence</span>: NutriData Child Mortality</p>
+            <p><span class="category">Description</span>: This dataset contains data from the World Health Organization. It is an estimation (a statistical model) that predicts the probability that a child aged 5 dies before reaching its 15th birthday.</p>
+            <p><span class="category">Description</span>: (when we update the website)</p>
+            <p><span class="category">Source</span>: child-mortality.csv, <a href="https://www.who.int/data/gho/data/indicators/indicator-details/GHO/mortality-rate-for-5-14-year-olds-(probability-of-dying-per-1000-children-aged-5-14-years)" target="_blank">https://www.who.int/data/gho/data/indicators/indicator-details/GHO/mortality-rate-for-5-14-year-olds-(probability-of-dying-per-1000-children-aged-5-14-years)</a></p>
+            <p><span class="category">Theme</span>: Child mortality and burden of disease</p>
+            <p><span class="category">Format</span>: CSV, JSON</p>
+            <p><span class="category">Periodicity</span>: Annual</p>
+            <p><span class="category">Rights Holder</span>: WHO</p>
+            <p><span class="category">Subject</span>: The probability that a child aged 5 dies before reaching its 15th birthday, a rate of deaths per 1000 children.</p>
+            <p><span class="category">Publisher</span>: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
+            <p><span class="category">Creator</span>: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
+            <p><span class="category">Language</span>: English</p>
+            <p><span class="category">Temporal Coverage</span>: 2010-2018</p>
+            <p><span class="category">Spatial Coverage</span>: World</p>
+            <p><span class="category">URL</span>: (same as identifier)</p>
+            <p><span class="category">Licence</span>: CC-BY-SA 4.0</p>
+            <p><span class="category">Licence</span>: (same as URL)</p>
+            <p><span class="category">Licence</span>: Completed</p>
         </div>
-        <div style="padding-top: 25px;">
-            <p><strong>Malnutrition Estimates Dataset</strong></p>
-            <p>Identifier: (Nutridata uri)</p>
-            <p>Title: NutriData Children Malnutrition Estimates</p>
-            <p>Description: This dataset contains data from UNICEF, WHO & World Bank’s Joint global database on child malnutrition. It estimates the number of children who show symptoms and effects of under- and malnutrition. The indicators (trends) are four: overweight, stunting, wasting (and severe wasting) and underweight.</p>
-            <p>Modified: (when we update the website)</p>
-            <p>Source: malnutrition-estimates.csv, <a href="https://data.unicef.org/resources/dataset/malnutrition-data/" target="_blank">https://data.unicef.org/resources/dataset/malnutrition-data/</a> (stored in Unicef website)</p>
-            <p>Theme: Child Malnutrition by indicators</p>
-            <p>Format: CSV, JSON</p>
-            <p>Periodicity: Annual</p>
-            <p>Rights Holders: UNICEF, WHO, World Bank</p>
-            <p>Subject: Country-level trends of 4 core child malnutrition indicators, along with national estimates and other ones such as geographic location, age and sex.</p>
-            <p>Publisher: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
-            <p>Creator: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
-            <p>Language: English</p>
-            <p>Temporal Coverage: 2000-2020</p>
-            <p>Spatial Coverage: World</p>
-            <p>URL: (same as identifier)</p>
-            <p>Licence: CC-BY-SA 4.0</p>
-            <p>Download: (same as URL)</p>
-            <p>Status: Completed</p>
+        <div id="nutriest" class="metadata-content">
+            <h4 class="text-center"> - Malnutrition Estimates Dataset - </h4>
+            <p><span class="category">Licence</span>: (Nutridata uri)</p>
+            <p><span class="category">Licence</span>: NutriData Children Malnutrition Estimates</p>
+            <p><span class="category">Description</span>: This dataset contains data from UNICEF, WHO & World Bank’s Joint global database on child malnutrition. It estimates the number of children who show symptoms and effects of under- and malnutrition. The indicators (trends) are four: overweight, stunting, wasting (and severe wasting) and underweight.</p>
+            <p><span class="category">Description</span>: (when we update the website)</p>
+            <p><span class="category">Source</span>: malnutrition-estimates.csv, <a href="https://data.unicef.org/resources/dataset/malnutrition-data/" target="_blank">https://data.unicef.org/resources/dataset/malnutrition-data/</a> (stored in Unicef website)</p>
+            <p><span class="category">Theme</span>: Child Malnutrition by indicators</p>
+            <p><span class="category">Format</span>: CSV, JSON</p>
+            <p><span class="category">Periodicity</span>: Annual</p>
+            <p><span class="category">Rights Holder</span>: UNICEF, WHO, World Bank</p>
+            <p><span class="category">Subject</span>: Country-level trends of 4 core child malnutrition indicators, along with national estimates and other ones such as geographic location, age and sex.</p>
+            <p><span class="category">Publisher</span>: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
+            <p><span class="category">Creator</span>: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
+            <p><span class="category">Language</span>: English</p>
+            <p><span class="category">Temporal Coverage</span>: 2000-2020</p>
+            <p><span class="category">Spatial Coverage</span>: World</p>
+            <p><span class="category">URL</span>: (same as identifier)</p>
+            <p><span class="category">Licence</span>: CC-BY-SA 4.0</p>
+            <p><span class="category">Licence</span>: (same as URL)</p>
+            <p><span class="category">Licence</span>: Completed</p>
         </div>
-         <div style="padding-top: 25px;">
-            <p><strong>GDP per capita Dataset</strong></p>
-            <p>Identifier: (Nutridata uri)</p>
-            <p>Title: NutriData GDP-per-capita</p>
-            <p>Description: This dataset contains data from World Bank. It shows the list of countries by the gross domestic product per capita.</p>
-            <p>Modified: (when we update the website)</p>
-            <p>Source: API_NY.GDP.MKTP.CD_DS2_en_csv_v2_3469429.csv,</p><a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD" target="_blank">https://data.worldbank.org/indicator/NY.GDP.MKTP.CD</a> </p>
-            <p>Theme: GDP per capita</p>
-            <p>Format: CSV, JSON</p>
-            <p>Periodicity: Annual</p>
-            <p>Rights Holders: World Bank, Our World in Data</p>
-            <p>Subject: List of countries by GDP per capita</p>
-            <p>Publisher: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
-            <p>Creator: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
-            <p>Language: English</p>
-            <p>Temporal Coverage: 2003-2020</p>
-            <p>Spatial Coverage: World</p>
-            <p>URL: (same as identifier)</p>
-            <p>Licence: CC-BY-SA 4.0</p>
-            <p>Download: (same as URL)</p>
-            <p>Status: Completed</p>
+        <div id="nutrigdp" class="metadata-content">
+            <h4 class="text-center"> - GDP per capita Dataset - </h4>
+            <p><span class="category">Identifier</span>: (Nutridata uri)</p>
+            <p><span class="category">Licence</span>: NutriData GDP-per-capita</p>
+            <p><span class="category">Description</span>: This dataset contains data from World Bank. It shows the list of countries by the gross domestic product per capita.</p>
+            <p><span class="category">Description</span>: (when we update the website)</p>
+            <p><span class="category">Source</span>: API_NY.GDP.MKTP.CD_DS2_en_csv_v2_3469429.csv,</p><a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD" target="_blank">https://data.worldbank.org/indicator/NY.GDP.MKTP.CD</a> </p>
+            <p><span class="category">Theme</span>: GDP per capita</p>
+            <p><span class="category">Format</span>: CSV, JSON</p>
+            <p><span class="category">Periodicity</span>: Annual</p>
+            <p><span class="category">Rights Holder</span>: World Bank, Our World in Data</p>
+            <p><span class="category">Subject</span>: List of countries by GDP per capita</p>
+            <p><span class="category">Publisher</span>: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
+            <p><span class="category">Creator</span>: Amanda Culoma, Giulia Massimino, Ariele Santello, Andrea Schimmenti</p>
+            <p><span class="category">Language</span>: English</p>
+            <p><span class="category">Temporal Coverage</span>: 2003-2020</p>
+            <p><span class="category">Spatial Coverage</span>: World</p>
+            <p><span class="category">URL</span>: (same as identifier)</p>
+            <p><span class="category">Licence</span>: CC-BY-SA 4.0</p>
+            <p><span class="category">Licence</span>: (same as URL)</p>
+            <p><span class="category">Licence</span>: Completed</p>
         </div>
       </div>
-      <div style="padding-top: 5px; padding-bottom: 10px;"><a href="NutriData-checklist.pdf" download>Download Check List</a></div>
+      <div><a href="NutriData-checklist.pdf" download>Download Check List</a></div>
     </div>
   </section>
 
