--- a/visualizations.html
+++ b/visualizations.html
@@ -110,12 +110,9 @@
   <section class="viz">
     <div class="container">
       <div class="heading_container">
-        <h3>
+        <h3 class="viztitle">
           Visualizations
         </h3>
-        <p>
-          Explore our paths
-        </p>
       </div>
 
       <div class="col-lg-12 col-md-12 col-sm-12 col">
@@ -169,10 +166,10 @@
             <h4 id="line-nation-title"></h4>
           </div>
           <div id="nations-button-linechart" class="col-lg-12 col-md-6 col-sm-6 col p-0"></div>
-          <div id="parent1" class="col-lg-6 col-md-6 col-sm-6 col">
+          <div id="parent1" class="col-lg-6 col-md-6 col-sm-6 col  p-0">
             <img class="dummy" src="images/download.png">
           </div>
-          <div id="parent2" class="col-lg-6 col-md-6 col-sm-6 col">
+          <div id="parent2" class="col-lg-6 col-md-6 col-sm-6 col  p-0">
             <img class="dummy" src="images/download.png">
           </div>
         </div>
