--- a/metadata.html
+++ b/metadata.html
@@ -70,15 +70,27 @@
     <div class="side_img">
       <img src="images/side-img.png" alt="" />
     </div>
-    <div class="container metadata-section">
-      <div class="heading_container">
-        <h3>
-          DATASETS - METADATA SECTION
-        </h3>
-      </div>
-      
-        <div id="nutridef" class="metadata-content">
-            <h4 class="text-center"> - Nutritional Deficiencies and Related Diseases/Disorders Dataset - </h4>
+    <div class="container-fluid metadata-section">
+
+      <div class="row">
+        <div class="heading_container col-12">
+          <h3>
+            DATASETSMETADATA SECTION
+          </h3>
+        </div>
+        <div class="col-sm-3 col-md-3 col-lg-3 col">
+          <ol class="list-group">
+            <li class="list-group-item"><a href="#nutridef">Nutritional Deficiencies and Related Diseases/Disorders Dataset</a></li>
+            <li class="list-group-item"><a href="#nutrimrt">Child Mortality Dataset</a></li>
+            <li class="list-group-item"><a href="#nutriest">Malnutrition Estimates Dataset</a></li>
+            <li class="list-group-item"><a href="#nutrigdp">GDP per capita Dataset</a></li>
+            <li class="list-group-item">Last dataset</li>
+            <li class="list-group-item">Download checklist</li>
+          </ol>
+        </div>
+        <div class="col-sm-9 col-md-9 col-lg-9 col">
+          <div id="nutridef" class="metadata-content">
+            <h4>Nutritional Deficiencies and Related Diseases/Disorders Dataset</h4>
             <p><span class="category">Identifier</span>: (NutriData uri)</p>
             <p><span class="category">Title</span>: NutriData Nutritional Deficiencies and Related Diseases and Disorders</p>
             <p><span class="category">Description</span>: This dataset contains data from the Institute for Health Metrics and Evaluation, namely, from the GBD section, Global Burden of Disease. The dataset focuses on nutritional disorders and deficiencies of individuals whose age mainly ranges from 5 to 19 years old (adolescents).</p>
@@ -101,7 +113,7 @@
         </div>
 
         <div id="nutrimrt" class="metadata-content">
-            <h4 class="text-center"> - Child Mortality Dataset - </h4>
+            <h4>Child Mortality Dataset</h4>
             <p><span class="category">Licence</span>: (Nutridata uri)</p>
             <p><span class="category">Licence</span>: NutriData Child Mortality</p>
             <p><span class="category">Description</span>: This dataset contains data from the World Health Organization. It is an estimation (a statistical model) that predicts the probability that a child aged 5 dies before reaching its 15th birthday.</p>
@@ -123,7 +135,7 @@
             <p><span class="category">Licence</span>: Completed</p>
         </div>
         <div id="nutriest" class="metadata-content">
-            <h4 class="text-center"> - Malnutrition Estimates Dataset - </h4>
+            <h4>Malnutrition Estimates Dataset</h4>
             <p><span class="category">Licence</span>: (Nutridata uri)</p>
             <p><span class="category">Licence</span>: NutriData Children Malnutrition Estimates</p>
             <p><span class="category">Description</span>: This dataset contains data from UNICEF, WHO & World Bank’s Joint global database on child malnutrition. It estimates the number of children who show symptoms and effects of under- and malnutrition. The indicators (trends) are four: overweight, stunting, wasting (and severe wasting) and underweight.</p>
@@ -145,7 +157,7 @@
             <p><span class="category">Licence</span>: Completed</p>
         </div>
         <div id="nutrigdp" class="metadata-content">
-            <h4 class="text-center"> - GDP per capita Dataset - </h4>
+            <h4>GDP per capita Dataset</h4>
             <p><span class="category">Identifier</span>: (Nutridata uri)</p>
             <p><span class="category">Licence</span>: NutriData GDP-per-capita</p>
             <p><span class="category">Description</span>: This dataset contains data from World Bank. It shows the list of countries by the gross domestic product per capita.</p>
@@ -166,6 +178,9 @@
             <p><span class="category">Licence</span>: (same as URL)</p>
             <p><span class="category">Licence</span>: Completed</p>
         </div>
+        </div>
+      </div>
+        
       </div>
       <div><a href="NutriData-checklist.pdf" download>Download Check List</a></div>
     </div>
@@ -247,7 +262,7 @@
   <footer class="container-fluid footer_section">
 
       <p>
-        Created by Amanda Culoma, Andrea Schimmenti, Ariele Santello and Giulia Massimino <br> for the final project of the Open Access and Digital Ethics course held by Monica Palmirani - master degree course DHDK - University of Bologna.
+        Created by Amanda Culoma, Andrea Schimmenti, Ariele Santello and Giulia Massimino <br> for the final project of the Open Access and Digital Ethics course held by Monica Palmiranimaster degree course DHDKUniversity of Bologna.
       <br>
       <br>
       This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" >Creative Commons Attribution-ShareAlike 4.0 International License.</a>
