--- a/visualizations.html
+++ b/visualizations.html
@@ -116,21 +116,21 @@
     <div class="container-fluid">
       <div class="row">
       <div class="col-lg-3 col-md-3 col-sm-3 col m-0">
-          <div class="card">
+          <div class="card  border-0">
             <div class="card-body">
               <h5 class="card-title">Conditions</h5>
               <p class="card-text">World map on conditions directly caused by poor or wrong nutrition. Select a condition and a year.</p>
               <button type="button" class="btn btn-info" onclick="mapChartButton();">Show data</button>
             </div>
           </div>
-          <div class="card">
+          <div class="card  border-0">
             <div class="card-body">
               <h5 class="card-title">Pathologies</h5>
               <p class="card-text">Time series barchart showing pathologies correlated to malnutritions. Select a country</p>
               <button type="button" class="btn btn-info" onclick="getNationsBarchart();">Show data</button>            
             </div>
           </div>
-          <div class="card">
+          <div class="card  border-0">
             <div class="card-body">
               <h5 class="card-title">GDP and Mortality (last 60 years)</h5>
               <p class="card-text">Linecharts showing time series on GDP and child mortality (5-24). Select a country</p>
