added new metadata css

--- a/metadata.html
+++ b/metadata.html
@@ -73,22 +73,28 @@
     <div class="container-fluid metadata-section">
 
       <div class="row">
-        <div class="heading_container col-12">
-          <h3>
-            DATASETSMETADATA SECTION
-          </h3>
-        </div>
+        
+
+
         <div class="col-sm-3 col-md-3 col-lg-3 col">
-          <ol class="list-group">
-            <li class="list-group-item"><a href="#nutridef">Nutritional Deficiencies and Related Diseases/Disorders Dataset</a></li>
-            <li class="list-group-item"><a href="#nutrimrt">Child Mortality Dataset</a></li>
-            <li class="list-group-item"><a href="#nutriest">Malnutrition Estimates Dataset</a></li>
-            <li class="list-group-item"><a href="#nutrigdp">GDP per capita Dataset</a></li>
-            <li class="list-group-item">Last dataset</li>
-            <li class="list-group-item">Download checklist</li>
-          </ol>
+          <div class="index-ul">
+            <ul class="no-bullets">
+              <li>Datasets: </li>
+              <li><a href="#nutridef">Nutritional Deficiencies and Related Diseases</a></li>
+              <li><a href="#nutrimrt">Child Mortality Dataset</a></li>
+              <li><a href="#nutriest">Malnutrition Estimates Dataset</a></li>
+              <li><a href="#nutrigdp">GDP per capita Dataset</a></li>
+              <li>Last dataset</li>
+              <li>Download checklist</li>
+            </ul>
+          </div>
         </div>
         <div class="col-sm-9 col-md-9 col-lg-9 col">
+          <div class="heading_container">
+            <h3>
+              DATASETS METADATA SECTION
+            </h3>
+          </div>
           <div id="nutridef" class="metadata-content">
             <h4>Nutritional Deficiencies and Related Diseases/Disorders Dataset</h4>
             <p><span class="category">Identifier</span>: (NutriData uri)</p>
