--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="visualizations.html"> Visualizations </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="catalogue.html">Catalogue</a>
+              </li>
 
             </ul>
           <!--  <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
@@ -511,6 +514,9 @@
               </li>
               <li class="nav-item">
                 <a style="color: #ffffff;" class="nav-link" href="visualizations.html"> Visualizations </a>
+              </li>
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="catalogue.html">Catalogue</a>
               </li>
 
 
